# OOP

./: .flake8  README.md  main.py  pyproject.toml
src/: category.py  lawngrass.py  product.py  smartphone.py
tests/: conftest.py  test_category.py  test_lawngrass.py  test_print_mixin.py  test_product.py  test_smartphone.py
