[tool.poetry]
name = "oop1"
version = "0.1.0"
description = ""
authors = ["Aleksey Krotov krot.playstation@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
env = "^0.1.0"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
